# home_service_robot

./: README.md
src/add_markers/: CMakeLists.txt  package.xml
src/add_markers/launch/: add_markers.launch
src/add_markers/src/: add_markers.cpp
src/pick_objects/: CMakeLists.txt  package.xml
src/pick_objects/launch/: pick_objects.launch
src/pick_objects/src/: pick_objects.cpp
src/rviz_conf/: rviz_conf.rviz
src/scripts/: add_markers.sh  home_service.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
src/world/: my_world.world
src/world/my_world_model/: model.sdf
